src/objects/Impact__c.object
<CustomObject>
    <fields>
        <fullName>Categorie_Impact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category Impact</label>
        <referenceTo>CategorieImpact__c</referenceTo>
        <relationshipLabel>Risk Impacts</relationshipLabel>
        <relationshipName>Risk_Impacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>risque__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk</label>
        <referenceTo>Risque__c</referenceTo>
        <relationshipLabel>Risk Impacts</relationshipLabel>
        <relationshipName>Risk_Impacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Risk Impact</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Impacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>